--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@types/react": "19.0.2",
     "@types/react-dom": "19.0.2",
     "@vitejs/plugin-react": "^4.3.4",
+    "babel-plugin-react-compiler": "^19.0.0-beta-63e3235-20250105",
     "eslint": "^9.17.0",
+    "eslint-plugin-react-compiler": "^19.0.0-beta-63e3235-20250105",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
